--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>📁 FileTube</title>
-  <link rel="icon" href="favicon.png" type="image/png">
+  <link rel="icon" href="assets/favicon.png" type="image/png">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,5 +16,10 @@
   <main id="fileContainer"></main>
 
   <script src="script.js"></script>
+
+<a href="https://github.com/YamiTeck/filetube.github.io" class="logo-link">
+  <img src="/assets/github-mark.png" alt="Logo" class="logo-img" />
+</a>
+
 </body>
 </html>
