--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <script src="script.js"></script>
 
-<a href="https://github.com/YamiTeck/filetube.github.io" class="logo-link"><img src="/assets/github-mark.png" alt="GitHub Mark" class="logo-img"></a>
+<a href="https://github.com/YamiTeck/filetube.github.io" class="logo-link"><img src="/assets/github-mark-white.png" alt="GitHub Mark" class="logo-img"></a>
 
 </body>
 </html>
