--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <script src="script.js"></script>
 
-<a href="https://github.com/YamiTeck/filetube.github.io" class="logo-link"><img src="/assets/github-mark-white.png" alt="GitHub Mark" class="logo-img"></a>
+<a href="https://github.com/YamiTeck/filetube.github.io" class="logo-link"><img src="https://cdn.discordapp.com/attachments/1224618173643358242/1371329560183836733/github-mark-white.png?ex=6822bdad&is=68216c2d&hm=185e70a1c200a677bca2600bf430126ca38b0225309d079a5cacb57c7ffbd3db&" alt="GitHub Mark" class="logo-img"></a>
 
 </body>
 </html>
